--- a/Typist/Typist.entitlements
+++ b/Typist/Typist.entitlements
@@ -8,6 +8,12 @@
 	<array/>
 	<key>com.apple.security.automation.apple-events</key>
 	<true/>
+	<key>com.apple.security.cs.disable-library-validation</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
+	<key>com.apple.security.network.server</key>
+	<true/>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)ssw.wickedpropeller.typist</string>
