--- a/Typyst.xcodeproj/xcshareddata/xcschemes/Typyst.xcscheme
+++ b/Typyst.xcodeproj/xcshareddata/xcschemes/Typyst.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1140"
+   LastUpgradeVersion = "1170"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -101,6 +101,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "Typsyt"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
