--- a/Typyst/GoogleService-Info.plist
+++ b/Typyst/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>547326598778-i5stkstj8r8dvhekhd7muceh364os94b.apps.googleusercontent.com</string>
+	<string>547326598778-17mp4isds84u69tas6ik2g8c4rs285fk.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.547326598778-i5stkstj8r8dvhekhd7muceh364os94b</string>
+	<string>com.googleusercontent.apps.547326598778-17mp4isds84u69tas6ik2g8c4rs285fk</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCpack3hqqedxQHGGPy9GjUakWdev6MiWc</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,24 +13,24 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.ssw.typyst</string>
+	<string>com.randomaccesssoftware.typyst</string>
 	<key>PROJECT_ID</key>
-	<string>typyst-bc4b3</string>
+	<string>typist-bc4b3</string>
 	<key>STORAGE_BUCKET</key>
-	<string>typyst-bc4b3.appspot.com</string>
+	<string>typist-bc4b3.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:547326598778:ios:0a68daa45a7f51e6f725c3</string>
+	<string>1:547326598778:ios:8f3f0e522bdafb65f725c3</string>
 	<key>DATABASE_URL</key>
-	<string>https://typyst-bc4b3.firebaseio.com</string>
+	<string>https://typist-bc4b3.firebaseio.com</string>
 </dict>
 </plist>
