--- a/Typyst/Info.plist
+++ b/Typyst/Info.plist
@@ -27,7 +27,7 @@
 	<key>NSAppleEventsUsageDescription</key>
 	<string>Typyst needs to be able to know when key presses are being performed in other apps</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2019 wickedPropeller. All rights reserved.</string>
+	<string>Copyright © 2019 WickedPropellerLLC. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
